<resources>
    <string name="app_name">AppPractice</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="safepin">SafePin</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>
